[workspace]
members = [
    "easy/solve-me-first",
    "easy/simple-array-sum",
    "easy/compare-the-triplets",
    "easy/a-very-big-sum",

    "medium/magic-square-forming",
    "medium/climbing-the-leaderboard",
    "medium/extra-long-factorials",
    "medium/non-divisible-subset",
    "medium/queens-attack2",
    "medium/the-time-in-words",
    "medium/bigger-is-greater",
    "medium/threed-surface-area",

    "hard/matrix-rotation-algo"
]

resolver = "2"
