[workspace]
members = [
    "easy/solve-me-first",
    "easy/simple-array-sum",
    "easy/compare-the-triplets",
    "easy/a-very-big-sum",

    "medium/magic-square-forming",
    "medium/climbing-the-leaderboard",
    "medium/extra-long-factorials",
    "medium/non-divisible-subset",
    "medium/queens-attack2",
    "medium/the-time-in-words",
    "medium/bigger-is-greater",
    "medium/threed-surface-area",
    "medium/bear-and-steady-gene",
    "medium/minimum-loss",
    "medium/connected-cell-in-grid",
    "medium/short-palindrome",
    "medium/gena-playing-hanoi",
    "medium/roads-and-libraries",
    "medium/journey-to-moon",
    "medium/really-special-subtree",
    "medium/snakes-and-ladders",
    "medium/shortest-reach",
    "medium/special-subtree",
    "medium/larry-array",
    "medium/sherlock-and-anagrams",
    "medium/coin-change",
    "medium/pairs",
    "medium/red-john-is-back",
    "medium/stock-maximize",

    "hard/matrix-rotation-algo",
    "hard/morgan-and-string",
    "hard/bead-ornaments",
    "hard/string-similarity"
]

resolver = "2"
